syntax = "proto3";

package pb;

option go_package = "product-service/pb";


service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}

message Product {
  int64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string created_at = 5;
  string updated_at = 6;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
}

message CreateProductResponse { Product product = 1; }

message GetProductRequest { int64 id = 1; }

message GetProductResponse { Product product = 1; }

message UpdateProductRequest {
  int64 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
}

message UpdateProductResponse { Product product = 1; }

message DeleteProductRequest { int64 id = 1; }

message DeleteProductResponse { bool success = 1; }

message ListProductsRequest {}

message ListProductsResponse { repeated Product products = 1; }
